# cpp-games

./: CMakeLists.txt
src/: Apple.cpp  Apple.hpp  Ball.cpp  Ball.hpp  Blocks.cpp  Blocks.hpp  GridCell.cpp  GridCell.hpp  Platform.cpp  Platform.hpp  Snake.cpp  Snake.hpp  SnakeBody.cpp  SnakeBody.hpp  SnakeHead.cpp  SnakeHead.hpp  constants.hpp  main.cpp
